--- a/ProyectoCoder/ProyectoCoderApp/templates/ProyectoCoderApp/crearPosteos.html
+++ b/ProyectoCoder/ProyectoCoderApp/templates/ProyectoCoderApp/crearPosteos.html
@@ -3,17 +3,54 @@
 {% block tituloPagina %}
 Register - App Coder
 {% endblock %}
+
 {% block b2 %}
-
 <section class="bg-light py-5">
-    <form action="" method="post">
-        {% csrf_token %}
-    
-        {{form.as_p}}
-    
-        <input type="submit" value="Guardar Estudiante">
-    </form>
-</section>
+    <div class="container px-5">
+        <h3>Formulario Posteo:</h3>
+        <br>
+        <div class="row gx-5 justify-content-center">
+            <div class="col-lg-6">
+                <div class="card">
+                    <div class="card-header text-center">
+                    Ingresar Formulario
+                    </div>
+                    <div class="card-body">
+                        <form action="" method="post" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            <table class="table table-theme">
+                                
+                                <tr> 
+                                    <td>Titulo:</td>  
+                                    <td><input type="text" name="titulo"></td> 
+                                </tr>
+            
+                                <tr> 
+                                    <td>Cuerpo: </td> 
+                                    <td><input type= "text" name="cuerpo"></td> 
+                                </tr>
 
+                                <tr> 
+                                    <td>Fecha: </td> 
+                                    <td><input type= "date" name="fecha"></td> 
+                                </tr>
+
+                                <tr> 
+
+                                    <td>Imagen: </td> 
+                                    <td><input type= "file" name="imagen"></td> 
+                                </tr>
+                                
+                            </table>
+                            <div class="card-body text-center">
+                                <input type="submit" class="btn btn-primary" value="Publicar" >
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
 
